Perkin-UAT/force-app/main/default/objects/Account/fields/No_Of_Closed_Won_Opportunities_INF__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Closed_Won_Opportunities_INF__c</fullName>
    <description>Count of Closed Won Opportunities</description>
    <label>Opportunities Won</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>