Perkin-UAT/force-app/main/default/objects/Account/fields/No_of_Contacts_INF__c.field-meta.xml
<CustomField>
    <fullName>No_of_Contacts_INF__c</fullName>
    <description>Count of Contacts</description>
    <label>Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>