Perkin-UAT/force-app/main/default/objects/Account/fields/No_of_Empty_Fields_Standard__c.field-meta.xml
<CustomField>
    <fullName>No_of_Empty_Fields_Standard__c</fullName>
    <formula>IF(ISBLANK(AccountNumber), 1, 0) + IF(ISBLANK(TEXT(AccountSource)), 1, 0) + IF(ISBLANK(AnnualRevenue), 1, 0) + IF(ISBLANK(BillingCity), 1, 0) + IF(ISBLANK(BillingCountry), 1, 0) + IF(ISBLANK(BillingPostalCode), 1, 0) + IF(ISBLANK(BillingState), 1, 0) + IF(ISBLANK(BillingStreet), 1, 0) + /*IF(ISBLANK(DunsNumber), 1, 0) + */ IF(ISBLANK(Fax), 1, 0) + IF(ISBLANK(TEXT(Industry)), 1, 0) + 

/*IF(ISBLANK(Jigsaw), 1, 0) +*/ 

IF(ISBLANK(LastActivityDate), 1, 0) +

/*IF(ISBLANK(NaicsCode), 1, 0) + IF(ISBLANK(NaicsDesc), 1, 0) + */

IF(ISBLANK(Name), 1, 0) + IF(ISBLANK(NumberOfEmployees), 1, 0) + IF(ISBLANK(OwnerId), 1, 0) + IF(ISBLANK(TEXT(Ownership)), 1, 0) + IF(ISBLANK(ParentId), 1, 0) + IF(ISBLANK(Phone), 1, 0) + IF(ISBLANK(TEXT(Rating)), 1, 0) + IF(ISBLANK(RecordTypeId), 1, 0) + IF(ISBLANK(ShippingCity), 1, 0) + IF(ISBLANK(ShippingCountry), 1, 0) + IF(ISBLANK(ShippingPostalCode), 1, 0) + IF(ISBLANK(ShippingState), 1, 0) + IF(ISBLANK(ShippingStreet), 1, 0) + IF(ISBLANK(Sic), 1, 0) + IF(ISBLANK(SicDesc), 1, 0) + IF(ISBLANK(Site), 1, 0) + IF(ISBLANK(TickerSymbol), 1, 0) +

/*IF(ISBLANK(Tradestyle), 1, 0) +*/ 

IF(ISBLANK(TEXT(Type)), 1, 0) + IF(ISBLANK(Website), 1, 0)

/*+ IF(ISBLANK(YearStarted), 1, 0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Empty Fields (Standard)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>