Perkin-UAT/force-app/main/default/objects/Account/fields/NSW_PCB__c.field-meta.xml
<CustomField>
    <fullName>NSW_PCB__c</fullName>
    <formula>vALUE(BillingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSW PCB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>