Perkin-UAT/force-app/main/default/objects/Account/fields/of_Informatics_Cases__c.field-meta.xml
<CustomField>
    <fullName>of_Informatics_Cases__c</fullName>
    <description>INF - 6/16/2017 not sure if still used</description>
    <label># of Informatics Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>