Perkin-UAT/force-app/main/default/objects/Account/fields/Online_Web_Access_IRA__c.field-meta.xml
<CustomField>
    <fullName>Online_Web_Access_IRA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Web Access (IRA)</label>
    <type>Checkbox</type>
</CustomField>