Perkin-UAT/force-app/main/default/objects/Account/fields/Opportunity_Info__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Info__c</fullName>
    <description>Displays concatenated opportunity details on account</description>
    <formula>&#39;Open:&#39; + Text(No_Of_Open_Opportunities_INF__c) + &#39;/Closed:&#39; +  Text(No_Of_Closed_Won_Opportunities_INF__c)</formula>
    <label>Opportunity Info</label>
    <type>Text</type>
</CustomField>