Perkin-UAT/force-app/main/default/objects/Account/fields/Partner_Types__c.field-meta.xml
<CustomField>
    <fullName>Partner_Types__c</fullName>
    <label>Partner Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Solutions Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>