Perkin-UAT/force-app/main/default/objects/Account/fields/Payment_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Code__c</fullName>
    <description>The field has the respective Payment Terms Code from SAP (Source: S-694369)</description>
    <label>Payment Terms Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>