Perkin-UAT/force-app/main/default/objects/Account/fields/Perten_Account_No__c.field-meta.xml
<CustomField>
    <fullName>Perten_Account_No__c</fullName>
    <label>Perten Account No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>