Perkin-UAT/force-app/main/default/objects/Account/fields/Physician_ID__c.field-meta.xml
<CustomField>
    <fullName>Physician_ID__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Physician ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>