Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Account_Approvals__c.field-meta.xml
<CustomField>
    <fullName>PKI_Account_Approvals__c</fullName>
    <label>Approvals#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>