Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Account_Dup_Key__c.field-meta.xml
<CustomField>
    <fullName>PKI_Account_Dup_Key__c</fullName>
    <description>Used by FIND DUPLICATES application created by Shashi Puttaswamy</description>
    <label>Account Dup Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>