Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Approved_Owners__c.field-meta.xml
<CustomField>
    <fullName>PKI_Approved_Owners__c</fullName>
    <label>Approved Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>