Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_GBL_Province__c.field-meta.xml
<CustomField>
    <fullName>PKI_GBL_Province__c</fullName>
    <label>Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>安徽省</fullName>
            </value>
            <value>
                <fullName>江苏省</fullName>
            </value>
            <value>
                <fullName>上海市</fullName>
            </value>
            <value>
                <fullName>浙江省</fullName>
            </value>
            <value>
                <fullName>北京市</fullName>
            </value>
            <value>
                <fullName>黑龙江省</fullName>
            </value>
            <value>
                <fullName>吉林省</fullName>
            </value>
            <value>
                <fullName>辽宁省</fullName>
            </value>
            <value>
                <fullName>河北省</fullName>
            </value>
            <value>
                <fullName>天津市</fullName>
            </value>
            <value>
                <fullName>山西省</fullName>
            </value>
            <value>
                <fullName>内蒙古自治区</fullName>
            </value>
            <value>
                <fullName>山东省</fullName>
            </value>
            <value>
                <fullName>江西省</fullName>
            </value>
            <value>
                <fullName>河南省</fullName>
            </value>
            <value>
                <fullName>重庆市</fullName>
            </value>
            <value>
                <fullName>贵州省</fullName>
            </value>
            <value>
                <fullName>四川省</fullName>
            </value>
            <value>
                <fullName>云南省</fullName>
            </value>
            <value>
                <fullName>湖南省</fullName>
            </value>
            <value>
                <fullName>湖北省</fullName>
            </value>
            <value>
                <fullName>海南省</fullName>
            </value>
            <value>
                <fullName>广东省</fullName>
            </value>
            <value>
                <fullName>广西壮族自治区</fullName>
            </value>
            <value>
                <fullName>福建省</fullName>
            </value>
            <value>
                <fullName>新疆维吾尔自治区</fullName>
            </value>
            <value>
                <fullName>陕西省</fullName>
            </value>
            <value>
                <fullName>青海省</fullName>
            </value>
            <value>
                <fullName>宁夏回族自治区</fullName>
            </value>
            <value>
                <fullName>甘肃省</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>