Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Local_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>PKI_Local_Account_Name__c</fullName>
    <description>This field contains information that is manually updated on a monthly basis. The information comes from Leo Lynch&#39;s team and is used to group accounts together based on the account&#39;s SAP Customer Number</description>
    <label>PKI Local Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>