Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Parent_DUNSNumber__c.field-meta.xml
<CustomField>
    <fullName>PKI_Parent_DUNSNumber__c</fullName>
    <label>PKI Parent DUNSNumber</label>
    <length>9</length>
    <type>Text</type>
</CustomField>