Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_ParentChild__c.field-meta.xml
<CustomField>
    <fullName>PKI_ParentChild__c</fullName>
    <description>Used by FIND DUPLICATES application. Contact Shashi Puttaswamy</description>
    <label>Parent/Child</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>