Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Primary_Channel__c.field-meta.xml
<CustomField>
    <fullName>PKI_Primary_Channel__c</fullName>
    <label>PKI Primary Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>