Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Related_Local_Account__c.field-meta.xml
<CustomField>
    <fullName>PKI_Related_Local_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by SAP integration</description>
    <inlineHelpText>Link to the Local Language version of the Account</inlineHelpText>
    <label>PKI Related Local Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Related Local Account)</relationshipLabel>
    <relationshipName>LocalLanguageAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>