Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Account_Group__c</fullName>
    <defaultValue>&quot;OMIT&quot;</defaultValue>
    <label>SAP Account Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>