Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_City__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_City__c</fullName>
    <description>SAP - KNA1/ORT01. City</description>
    <label>PKI SAP City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>