Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Country_Code__c</fullName>
    <description>SAP - KNA1/LAND1. Country 2 digit ISO code</description>
    <label>PKI SAP Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>