Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Customer_Base_Name__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Base_Name__c</fullName>
    <description>SAP - KNA1/HNAME1. Standard name applied to all related accounts in the hierarchy</description>
    <label>PKI SAP Customer Base Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>