Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Customer_Base_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Base_Number__c</fullName>
    <description>SAP - KNA1/HKUNNR. HgLvCust. This is the raw hierarchy number with leading zeros</description>
    <label>PKI SAP Customer Base Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>