Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Customer_Base_Number_Formatted__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Base_Number_Formatted__c</fullName>
    <description>SAP - KNA1/HKUNNR. HgLvCust. Same as PKI SAP Customer Base Number except mapped to a numerical field so the leading zeros are removed</description>
    <label>PKI SAP Customer Base Number Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>