Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Number__c</fullName>
    <description>SAP - KNA1/KUNNR. Customer number for SoldToShipTo. IMPORTANT this is the external ID for the Customer Master integration used by Dell Boomi between SAP and SDFC. It is critical to the integrity of the data being passed from SAP</description>
    <externalId>true</externalId>
    <label>PKI SAP Customer Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>