Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Customer_Number_Formatted__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Customer_Number_Formatted__c</fullName>
    <description>SAP - KNA1/KUNNR. Customer number for SoldToShipTo. Same as PKI SAP Customer Number except mapped to numerical field to remove leading zero</description>
    <label>PKI SAP Customer Number Formatted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>