Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_EInvoice_Platform_Id__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_EInvoice_Platform_Id__c</fullName>
    <description>The SAP EInvoice Platform ID</description>
    <label>SAP E-Invoice Platform ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>