Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Fax__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Fax__c</fullName>
    <description>SAP - KNA1/TELFX. Fax Number</description>
    <label>PKI SAP Fax</label>
    <type>Phone</type>
</CustomField>