Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Function__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Function__c</fullName>
    <description>SAP - KNA1/KTOKD. Customer Account Group</description>
    <label>PKI SAP Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>