Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Industry_Key__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Industry_Key__c</fullName>
    <description>KNA1.BRSCH (&quot;Industry Key&quot;)</description>
    <label>PKI SAP Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic/Research</fullName>
            </value>
            <value>
                <fullName>Advanced Materials</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agr and Food</fullName>
            </value>
            <value>
                <fullName>Auto and Machinery</fullName>
            </value>
            <value>
                <fullName>Auto Leasing</fullName>
            </value>
            <value>
                <fullName>Biochemicals</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>BR Others Tax Cust</fullName>
            </value>
            <value>
                <fullName>BR Others TaxFree Cs</fullName>
            </value>
            <value>
                <fullName>BR Public Tax Cust</fullName>
            </value>
            <value>
                <fullName>BR Public TaxFree Cs</fullName>
            </value>
            <value>
                <fullName>Ceramics to Metal</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Columns</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Consum Blocked</fullName>
            </value>
            <value>
                <fullName>CRO/CMO</fullName>
            </value>
            <value>
                <fullName>Dealers&amp;Distributors</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Food &amp; Fragrance</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Gasses/fuels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>