Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Language__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Language__c</fullName>
    <label>PKI SAP Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>