Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Name_1__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Name_1__c</fullName>
    <description>SAP - KNA1/NAME1. This holds the company name</description>
    <label>PKI SAP Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>