Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Name_2__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Name_2__c</fullName>
    <description>SAP - KNA1/NAME2
MG changed label to &#39;Account Name 2&#39;  7-21-20  API name stays same</description>
    <label>Account Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>