Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Name_3__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Name_3__c</fullName>
    <description>SAP - KNA1/NAME3</description>
    <label>NAME3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>