Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Phone__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Phone__c</fullName>
    <description>SAP - KNA1/TELF1. First Telephone Number</description>
    <label>PKI SAP Phone</label>
    <type>Phone</type>
</CustomField>