Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Postal_Code__c</fullName>
    <description>SAP - KNA1/PSTLZ. Postal Code</description>
    <label>PKI SAP Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>