Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Region__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Region__c</fullName>
    <description>SAP - KNA1/REGIO. Region (State,Province,County)</description>
    <label>PKI SAP Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>