Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_SFDC_Name__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_SFDC_Name__c</fullName>
    <description>The value in this field is synced from SAP using WebMethods</description>
    <label>PKI SAP SFDC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>