Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_SAP_Street__c.field-meta.xml
<CustomField>
    <fullName>PKI_SAP_Street__c</fullName>
    <description>SAP - KNA1/STRAS. House number and street</description>
    <label>PKI SAP Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>