Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_ShippingCityLocal__c.field-meta.xml
<CustomField>
    <fullName>PKI_ShippingCityLocal__c</fullName>
    <label>Local City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>