Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_ShippingPostalCodeLocal__c.field-meta.xml
<CustomField>
    <fullName>PKI_ShippingPostalCodeLocal__c</fullName>
    <label>Local Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>