Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_ShippingStateLocal__c.field-meta.xml
<CustomField>
    <fullName>PKI_ShippingStateLocal__c</fullName>
    <label>Local State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>