Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_ShippingStreetLocal__c.field-meta.xml
<CustomField>
    <fullName>PKI_ShippingStreetLocal__c</fullName>
    <label>Local Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>