Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_Status__c.field-meta.xml
<CustomField>
    <fullName>PKI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Merge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>