Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_TaxNumber4__c.field-meta.xml
<CustomField>
    <fullName>PKI_TaxNumber4__c</fullName>
    <label>PKI TaxNumber4</label>
    <length>18</length>
    <type>Text</type>
</CustomField>