Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_TaxNumber5__c.field-meta.xml
<CustomField>
    <fullName>PKI_TaxNumber5__c</fullName>
    <label>PKI TaxNumber5</label>
    <length>60</length>
    <type>Text</type>
</CustomField>