Perkin-UAT/force-app/main/default/objects/Account/fields/PKI_VATNumber__c.field-meta.xml
<CustomField>
    <fullName>PKI_VATNumber__c</fullName>
    <label>PKI VATNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>