Perkin-UAT/force-app/main/default/objects/Account/fields/PKICountry__c.field-meta.xml
<CustomField>
    <fullName>PKICountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to PKI Country object to use for other Territory detail information</description>
    <inlineHelpText>Lookup to PKI Country object to use for other Territory detail information</inlineHelpText>
    <label>PKI Country</label>
    <referenceTo>PKI_Country__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>