Perkin-UAT/force-app/main/default/objects/Account/fields/PKIRADIDENTIFIER__c.field-meta.xml
<CustomField>
    <fullName>PKIRADIDENTIFIER__c</fullName>
    <label>PKIRADIDENTIFIER</label>
    <length>3</length>
    <type>Text</type>
</CustomField>