Perkin-UAT/force-app/main/default/objects/Account/fields/Pre_Reagents_2__c.field-meta.xml
<CustomField>
    <fullName>Pre_Reagents_2__c</fullName>
    <description>11/10/15 - To be deleted</description>
    <label>Reagents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PAPP-A</fullName>
            </value>
            <value>
                <fullName>fHCGb</fullName>
            </value>
            <value>
                <fullName>HCG Intact</fullName>
            </value>
            <value>
                <fullName>uE3</fullName>
            </value>
            <value>
                <fullName>Inhibin</fullName>
            </value>
            <value>
                <fullName>AFP</fullName>
            </value>
            <value>
                <fullName>PLGF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>