Perkin-UAT/force-app/main/default/objects/Account/fields/Prefilled_Sequential_Requistions__c.field-meta.xml
<CustomField>
    <fullName>Prefilled_Sequential_Requistions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefilled Sequential Requistions</label>
    <type>Checkbox</type>
</CustomField>