Perkin-UAT/force-app/main/default/objects/Account/fields/PreGeoCode__c.field-meta.xml
<CustomField>
    <fullName>PreGeoCode__c</fullName>
    <formula>if(or(left(ShippingPostalCode,3)=&quot;&quot;,len(left(ShippingPostalCode,3))&lt;&gt;3) ,&quot;NA&quot;,left(ShippingPostalCode,3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreGeoCode</label>
    <type>Text</type>
</CustomField>