Perkin-UAT/force-app/main/default/objects/Account/fields/Project_Farma_s_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Farma_s_Client_Type__c</fullName>
    <label>Project Farma&#39;s Client Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>