Perkin-UAT/force-app/main/default/objects/Account/fields/Quote_Invoice_Required__c.field-meta.xml
<CustomField>
    <fullName>Quote_Invoice_Required__c</fullName>
    <label>Quote/Invoice Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quote required before PO &amp; Payment</fullName>
            </value>
            <value>
                <fullName>Invoice to trigger payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>