Perkin-UAT/force-app/main/default/objects/Account/fields/Reference_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact__c</fullName>
    <label>Reference Contact</label>
    <length>64</length>
    <type>Text</type>
</CustomField>