Perkin-UAT/force-app/main/default/objects/Account/fields/Reseller_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Term_Date__c</fullName>
    <description>Contract Term Date of Reseller Account</description>
    <label>Reseller Term Date</label>
    <type>Date</type>
</CustomField>