Perkin-UAT/force-app/main/default/objects/Account/fields/Sales_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_City_Name__c</fullName>
    <description>Allows for the deduplication of Accounts</description>
    <inlineHelpText>The sales team can enter corrections to the address supplied by the ERP systems</inlineHelpText>
    <label>Sales City Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>