Perkin-UAT/force-app/main/default/objects/Account/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <description>Identifies SAP Sales Org</description>
    <label>Sales Org</label>
    <length>8</length>
    <type>Text</type>
</CustomField>