Perkin-UAT/force-app/main/default/objects/Account/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <label>Sales Office (GeoCode)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>